<resources>
    <string name="app_name">活在广工</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="login_phonenum">输入手机号</string>
    <string name="login_password">输入密码</string>
    <string name="btn_login_login">登录</string>
    <string name="activity_name">活动名称：</string>
    <string name="set_form_data">报名表单（可选）</string>
    <string name="name">姓名</string>
    <string name="phone_number">手机号码</string>
    <string name="check_status">审核状态：未审核</string>
    <string name="preview">预览</string>
    <string name="publish">发布</string>
    <string name="type">类型：</string>
    <string name="host">主办单位：</string>
    <string name="detail">详情：</string>
    <string name="back">返回</string>
    <string name="sign_up_form">报名表：</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="btn_login_forget">忘记密码?</string>
    <string name="btn_login_register">没有账号?现在去注册</string>
    <string name="btn_register_register">注册</string>
    <string name="register_password_again">确认密码</string>
    <string name="tv_organization_name">单位信息</string>
    <string name="string_activity_register">注册</string>
    <string name="string_activity_selectclass">选课</string>
    <string name="string_activity_sign_up">马上报名</string>
    <string name="menu_push">推送</string>
    <string name="cancel">取消</string>

    <string-array name="activity_type_array">
        <item>公益</item>
        <item>讲座</item>
        <item>比赛</item>
        <item>演出</item>
        <item>其他</item>
    </string-array>

    <string-array name="week_ary">
        <item>当前周</item>
        <item>第 1 周</item>
        <item>第 2 周</item>
        <item>第 3 周</item>
        <item>第 4 周</item>
        <item>第 5 周</item>
        <item>第 6 周</item>
        <item>第 7 周</item>
        <item>第 8 周</item>
        <item>第 9 周</item>
        <item>第 10 周</item>
        <item>第 11 周</item>
        <item>第 12 周</item>
        <item>第 13 周</item>
        <item>第 14 周</item>
        <item>第 15 周</item>
        <item>第 16 周</item>
        <item>第 17 周</item>
        <item>第 18 周</item>
        <item>第 19 周</item>
        <item>第 20 周</item>
        <item>第 21 周</item>
        <item>第 22 周</item>
    </string-array>
</resources>
